Improve autorouter logging and locale handling
Refactored autorouter session and pass logging to use new FRLogger.formatDuration and formatScore methods for clearer output. Enhanced resource usage tracking in BatchAutorouter (v1.9) to log CPU time, memory allocation, and peak heap usage. Updated locale selection in StartupOptions to use Locale.of for consistency. Ensured decimal formatting uses US locale in FRLogger. Added required modules for management APIs in module-info.java.